--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -7,9 +7,35 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">   
 </head>
-<body>
-    <div id="container">
-        <h1>Work Timer</h1>
+<title>Page Title</title>
+<script>
+var upgradeTime = 1;
+var seconds = upgradeTime;
+function timer() {
+  var days        = Math.floor(seconds/24/60/60);
+  var hoursLeft  = Math.floor((seconds) - (days*86400));
+  var hours      = Math.floor(hoursLeft/3600);
+  var minutesLeft = Math.floor((hoursLeft) - (hours*3600));
+  var minutes    = Math.floor(minutesLeft/60);
+  var remainingSeconds = seconds % 60;
+  function pad(n) {
+    return (n < 10 ? "0" + n : n);
+   
+  }
+  document.getElementById('countdown').innerHTML =pad(hours) + ":" + pad(minutes) + ":" + pad(remainingSeconds);
+  if (seconds == 0) {
+    clearInterval(countdownTimer);
+    document.getElementById('countdown').innerHTML = "Completed";
+  } else {
+    seconds++;
+  }
+}
+var countdown = setInterval('timer()', 1000);
 
-    </div>
+</script>
+</head>
+<body>
+<span id="countdown" class="timer"></span>
 </body>
+
+</html>
