--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -6,36 +6,85 @@
     <title>Timer</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">   
-</head>
-<title>Page Title</title>
-<script>
-var upgradeTime = 1;
-var seconds = upgradeTime;
-function timer() {
-  var days        = Math.floor(seconds/24/60/60);
-  var hoursLeft  = Math.floor((seconds) - (days*86400));
-  var hours      = Math.floor(hoursLeft/3600);
-  var minutesLeft = Math.floor((hoursLeft) - (hours*3600));
-  var minutes    = Math.floor(minutesLeft/60);
-  var remainingSeconds = seconds % 60;
-  function pad(n) {
-    return (n < 10 ? "0" + n : n);
-   
-  }
-  document.getElementById('countdown').innerHTML =pad(hours) + ":" + pad(minutes) + ":" + pad(remainingSeconds);
-  if (seconds == 0) {
-    clearInterval(countdownTimer);
-    document.getElementById('countdown').innerHTML = "Completed";
-  } else {
-    seconds++;
-  }
-}
-var countdown = setInterval('timer()', 1000);
 
-</script>
 </head>
 <body>
-<span id="countdown" class="timer"></span>
+    <div id="container">
+    <div class="jumbotron text-center">
+        <div class="timer">
+          <span class="minutes">
+            00
+          </span>
+          :
+          <span class="seconds">
+            00
+          </span>
+        </div>
+        <div class="time-buttons">
+          <button class="btn btn-lg btn-success" data-action="start">
+            Start
+          </button>
+          <button class="btn btn-lg btn-danger" data-action="stop">
+            Stop
+          </button>
+          <button class="btn btn-lg btn-link btn-block" data-action="reset">
+            Reset
+          </button>
+        </div>
+      </div>
+      </div>
+    <script>
+
+        const btnStartElement = document.querySelector('[data-action="start"]');
+        const btnStopElement = document.querySelector('[data-action="stop"]');
+        const btnResetElement = document.querySelector('[data-action="reset"]');
+        const minutes = document.querySelector('.minutes');
+        const seconds = document.querySelector('.seconds');
+        let timerTime = 0;
+        let interval;
+
+
+        const start = () => {
+        isRunning = true;
+        interval = setInterval(incrementTimer, 1000)
+        }
+
+        const stop = () => {
+        isRunning = false;
+        clearInterval(interval);
+        }
+
+        const reset = () => {
+        minutes.innerText = '00';
+        seconds.innerText = '00';
+        }
+
+        const pad = (number) => {
+        return (number < 10) ? '0' + number : number;
+        }
+
+        const incrementTimer = () => {
+        timerTime++;
+        
+        const numberMinutes = Math.floor(timerTime / 60);
+        const numberSeconds = timerTime % 60;
+        
+        minutes.innerText = pad(numberMinutes);
+        seconds.innerText = pad(numberSeconds);
+        }
+
+        btnStartElement.addEventListener('click', startTimer = () => {
+        start();
+        });
+
+        btnStopElement.addEventListener('click', stopTimer = () => {
+        stop();
+        });
+
+        btnResetElement.addEventListener('click', stopTimer = () => {
+        reset();
+        });
+    </script>
 </body>
 
 </html>
